apps/media-server/pinchflat/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/expose: "true"
  name: pinchflat
  namespace: media-server
spec:
  type: ClusterIP
  ports:
  - name: pinchflat-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sonarr
