apps/media-server/pinchflat/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinchflat
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: pinchflat
      port:
        number: 80
  tls:
    - hosts:
        - pinchflat
